Fixed background cutting off on the search page

--- a/public/search.css
+++ b/public/search.css
@@ -1,3 +1,8 @@
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
 body {
   background: #1db954;
 }
@@ -12,14 +17,14 @@ h1, h2{
     color: #000000;
   }
 
-div, .container{
-    justify-content: center;
-}
-
 .container{
     display: flex;
     justify-content: center;
     background-color: lightgrey;
-    max-width: 400px;
+    max-width: 700px;
     gap: 50px;
-  }
+}
+
+text {
+  padding: 5px;
+}
